--- a/package.json
+++ b/package.json
@@ -12,21 +12,29 @@
   "dependencies": {
     "@google-cloud/translate": "^9.3.0",
     "@prisma/client": "^6.19.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "heroicons": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
     "mongodb": "^6.20.0",
     "next": "16.0.0",
+    "next-auth": "^4.24.13",
     "pg": "^8.16.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "zod": "^4.1.12"
   },
   "type": "module",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.24",
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
