--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google-cloud/translate": "^9.3.0",
     "@prisma/client": "^6.19.0",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.1",
     "bcrypt": "^6.0.0",
@@ -21,6 +22,7 @@
     "express": "^5.1.0",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
+    "formidable": "^3.5.4",
     "heroicons": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
@@ -38,6 +40,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/formidable": "^3.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.25",
     "@types/pg": "^8.15.6",
